# ap_trends

./: .gitignore  README.md  cli_commands.txt  m__bertopic_analysis.py  m__bertopic_modeling.py  m__dataset.py  m__dataset2.py  m__dataset_1.py  m__dataset_1_analysis.py  m__dataset_2.py  m__dataset_2_analysis.py  m__dataset_2_geo.py  m__dataset_3.py  m__dataset_analysis.py  m__embeddings.py  m__playground.py  m__psycarticles.py  main.py  pyproject.toml
dataset/: cleanup_recap.json  dataset_topic.csv
dataset/openai_small/bertopic/: config.json  probs.npy  topic_embeddings.safetensors
dataset/openai_small/titles_only/: dataset_topic.csv
dataset/openai_small/titles_only/bertopic/: probs.npy  topic_embeddings.safetensors  topic_info.csv  topics.json
dataset/openai_small/titles_with_abstracts/: dataset.csv  dataset_topic.csv
dataset/openai_small/titles_with_abstracts/bertopic/: probs.npy  topic_embeddings.safetensors  topic_info.csv  topics.json
dataset/openai_small/titles_with_excerpts_2/: dataset.csv  dataset_topic.csv
dataset/openai_small/titles_with_excerpts_2/bertopic/: probs.npy  topic_embeddings.safetensors  topic_info.csv  topics.json
dataset/openai_small/titles_with_excerpts_3/: dataset_topic.csv
dataset/openai_small/titles_with_excerpts_3/bertopic/: probs.npy  topic_embeddings.safetensors  topics.json
dataset/titles_with_excerpts_2/: dataset_topic.csv
datasets/dataset_1/: cleanup_recap.json  dataset.csv  dataset_topic.csv  proquest.txt  scopus.txt  scopus_1.csv  scopus_2.csv
datasets/dataset_1/bertopic/: topic_embeddings.safetensors  topics.json
datasets/dataset_1/openai_small/bertopic/: config.json  topic_embeddings.safetensors  topics.json
datasets/dataset_2/: cleanup_recap.json  dataset.csv  dataset_topic.csv  proquest.txt  psycarticles.csv  psycarticles_cleaned.csv
datasets/dataset_2/bertopic/: topic_embeddings.safetensors  topics.json
datasets/dataset_2/openai_large/bertopic/: topic_embeddings.safetensors
datasets/dataset_2/openai_small/bertopic/: probs.npy  topic_embeddings.safetensors  topic_info.csv  topics.json
datasets/dataset_2/openai_small/titles_only/: dataset.csv
datasets/dataset_2/openai_small/titles_with_abstracts/: dataset_topic.csv
datasets/dataset_2/openai_small/titles_with_abstracts/bertopic/: probs.npy  topic_embeddings.safetensors  topic_info.csv  topics.json
datasets/dataset_2/openai_small/titles_with_excerpts/bertopic/: topic_info.csv
datasets/dataset_2/openai_small/titles_with_excerpts_2/: dataset_topic.csv
datasets/dataset_2/openai_small/titles_with_excerpts_2/bertopic/: probs.npy  topic_embeddings.safetensors  topic_info.csv  topics.json
datasets/dataset_3/: cleanup_recap.json  proquest.txt  psycarticles.csv  scopus_1.csv
datasets/dataset_3/bertopic/: topic_embeddings.safetensors  topics.json
datasets/dataset_3/openai_small/bertopic/: topic_embeddings.safetensors  topics.json
lib/: embeddings.py  utils.py  utils_base.py  utils_embeddings.py  utils_pandas.py
lib/bertopic/: model_dataset_1.py  model_dataset_2.py  model_dataset_3.py
lib/bertopic/dataset_1/openai/: model_small.py
lib/bertopic/dataset_2/openai/: model_small.py
lib/bertopic/dataset_3/openai/: model_small.py
lib/bertopic/sentence_transformers/: model_1.py  model_all_mini_lm_l6_v2.py
