[project]
name = "ap-bertopic"
version = "0.1.0"
description = "Analysis of trends in aviation psychology using BERTopic modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.17.4",
    "langdetect>=1.0.9",
    "marimo>=0.19.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "openai>=2.15.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.11",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit
]

# Never automatically remove unused imports in __init__.py
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "E501",  # Line too long (handled by formatter)
    "N803",  # Argument name should be lowercase
    "S101",  # Use of assert detected
    "T201",  # Unused import in __init__.py
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "acme",
    ".eggs",
    "m__*.py",
    "acme"
]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

[tool.ruff.lint.isort]
known-first-party = []  # Replace with your package name

[tool.mypy]
# Basic type checking
python_version = "3.10"  # Match your target Python version
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# Strictness options (start with these, can increase later)
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude 
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "acme",
    "(^|.*/)m__.*\\.py$"
]


# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
ignore_errors = true
